--- a/index.html
+++ b/index.html
@@ -83,25 +83,53 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td class="w-75"></td>
+                    <th scope="row"></th>
+                    <td class="w-75">Kale</td>
                     <td></td>   
-                    <td></td>
-                    <td></td>           
+                    <td>4</td>
+                    <td>1</td>           
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td class="w-75"></td>
+                    <th scope="row"></th>
+                    <td class="w-75">Brayden</td>
                     <td></td> 
-                    <td></td>
-                    <td></td>             
+                    <td>0</td>
+                    <td>1</td>             
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
-                    <td class="w-75"></td>
+                    <th scope="row"></th>
+                    <td class="w-75">Doc</td>
                     <td></td>    
-                    <td></td>
-                    <td></td>          
+                    <td>6</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Lucas</td>
+                    <td></td>    
+                    <td>5</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Matt</td>
+                    <td></td>    
+                    <td>8</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Brad</td>
+                    <td></td>    
+                    <td>12</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Kirk</td>
+                    <td></td>    
+                    <td>10</td>
+                    <td>1</td>          
                 </tr>
             </tbody>
         </table>
