--- a/index.html
+++ b/index.html
@@ -84,51 +84,65 @@
             <tbody>
                 <tr>
                     <th scope="row"></th>
-                    <td class="w-75">Kale</td>
-                    <td></td>   
-                    <td>4</td>
-                    <td>1</td>           
-                </tr>
-                <tr>
-                    <th scope="row"></th>
                     <td class="w-75">Brayden</td>
-                    <td></td> 
+                    <td>9</td> 
                     <td>0</td>
                     <td>1</td>             
                 </tr>
                 <tr>
                     <th scope="row"></th>
-                    <td class="w-75">Doc</td>
-                    <td></td>    
-                    <td>6</td>
-                    <td>1</td>          
-                </tr>
-                <tr>
-                    <th scope="row"></th>
                     <td class="w-75">Lucas</td>
-                    <td></td>    
+                    <td>8</td>    
                     <td>5</td>
                     <td>1</td>          
                 </tr>
                 <tr>
                     <th scope="row"></th>
+                    <td class="w-75">Kale</td>
+                    <td>7</td>   
+                    <td>4</td>
+                    <td>1</td>           
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Doc</td>
+                    <td>6</td>    
+                    <td>6</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Darcy</td>
+                    <td>5</td>    
+                    <td>3</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
                     <td class="w-75">Matt</td>
-                    <td></td>    
+                    <td>4</td>    
                     <td>8</td>
                     <td>1</td>          
                 </tr>
                 <tr>
                     <th scope="row"></th>
-                    <td class="w-75">Brad</td>
-                    <td></td>    
-                    <td>12</td>
+                    <td class="w-75">Wheels</td>
+                    <td>3</td>    
+                    <td>7</td>
                     <td>1</td>          
                 </tr>
                 <tr>
                     <th scope="row"></th>
                     <td class="w-75">Kirk</td>
-                    <td></td>    
+                    <td>2</td>    
                     <td>10</td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row"></th>
+                    <td class="w-75">Brad</td>
+                    <td>1</td>    
+                    <td>12</td>
                     <td>1</td>          
                 </tr>
             </tbody>
