--- a/week1.html
+++ b/week1.html
@@ -83,8 +83,8 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75">Kirk</td>
-                    <td>18'4"</td>
+                    <td class="w-75">Darcy</td>
+                    <td>5'1"</td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
@@ -114,21 +114,21 @@
                     <td>68</td>
                     <td>67</td>
                     <td>-0.6</td>
-                    <td></td>
+                    <td>9</td>
                 </tr>
                 <th scope="row">&#129352</th>
                     <td class="w-75">Lucas</td>
                     <td>74</td>
                     <td>69</td>
                     <td>4.8</td>
-                    <td></td>
+                    <td>8</td>
                 <tr>
                     <th scope="row">&#129353</th>
                     <td class="w-75">Kale</td>
                     <td>74</td>
                     <td>70</td>
                     <td>4.8</td>
-                    <td></td>
+                    <td>7</td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
@@ -136,31 +136,47 @@
                     <td>78</td>
                     <td>72</td>
                     <td>8.3</td>
-                    <td></td>
+                    <td>6</td>
                 </tr>
                 <tr>
                     <th scope="row">5</th>
+                    <td class="w-75">Darcy</td>
+                    <td>76</td>
+                    <td>73</td>
+                    <td>6.5</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
                     <td class="w-75">Matt</td>
                     <td>81</td>
                     <td>73</td>
                     <td>11.0</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">6</th>
-                    <td class="w-75">Brad</td>
-                    <td>87</td>
-                    <td>80</td>
-                    <td>16.4</td>
-                    <td></td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <th scope="row">7</th>
+                    <td class="w-75">Wheels</td>
+                    <td>83</td>
+                    <td>76</td>
+                    <td>11.9</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th scope="row">8</th>
                     <td class="w-75">Kirk</td>
                     <td>87</td>
                     <td>80</td>
                     <td>12.8</td>
-                    <td></td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">9</th>
+                    <td class="w-75">Brad</td>
+                    <td>87</td>
+                    <td>80</td>
+                    <td>16.4</td>
+                    <td>1</td>
                 </tr>
             </tbody>
         </table>
