--- a/index.html
+++ b/index.html
@@ -83,63 +83,63 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">&#127942</th>
                     <td class="w-75">Brayden</td>
                     <td>9</td> 
                     <td>0</td>
                     <td>1</td>             
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">&#129352</th>
                     <td class="w-75">Lucas</td>
                     <td>8</td>    
                     <td>5</td>
                     <td>1</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">&#129353</th>
                     <td class="w-75">Kale</td>
                     <td>7</td>   
                     <td>4</td>
                     <td>1</td>           
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">4</th>
                     <td class="w-75">Doc</td>
                     <td>6</td>    
                     <td>6</td>
                     <td>1</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">5</th>
                     <td class="w-75">Darcy</td>
                     <td>5</td>    
                     <td>3</td>
                     <td>1</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">6</th>
                     <td class="w-75">Matt</td>
                     <td>4</td>    
                     <td>8</td>
                     <td>1</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">7</th>
                     <td class="w-75">Wheels</td>
                     <td>3</td>    
                     <td>7</td>
                     <td>1</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">8</th>
                     <td class="w-75">Kirk</td>
                     <td>2</td>    
                     <td>10</td>
                     <td>1</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">9</th>
                     <td class="w-75">Brad</td>
                     <td>1</td>    
                     <td>12</td>
