--- a/week2.html
+++ b/week2.html
@@ -5,22 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WGL 2026</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: rgb(73, 145, 103);
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-
-        .container {
-            background-color: rgb(73, 145, 103);
-            padding: 20px;
-            border-radius: 10px;
-            max-width: 1800px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <nav class="navbar navbar-expand-lg navbar-light bg-light">
