--- a/week2.html
+++ b/week2.html
@@ -68,14 +68,14 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Brayden</td>
+                    <td>19'2"</td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Brayden</td>
+                    <td>24'6"</td>
                 </tr>
             </tbody>
         </table>
@@ -95,10 +95,10 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Brayden</td>
+                    <td>77</td>
+                    <td>77</td>
+                    <td>4.6</td>
                     <td></td>
                 </tr>
                 <th scope="row">&#129352</th>
