--- a/week6.html
+++ b/week6.html
@@ -68,14 +68,14 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75">Kale</td>
-                    <td>18'1"</td>
+                    <td class="w-75"></td>
+                    <td></td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75">Brayden</td>
-                    <td>24'6"</td>
+                    <td class="w-75"></td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
@@ -95,17 +95,17 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75">Kale</td>
-                    <td>75</td>
-                    <td>71</td>
-                    <td>3.0</td>
+                    <td class="w-75"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                 </tr>
                 <th scope="row">&#129352</th>
-                    <td class="w-75">Brayden</td>
-                    <td>77</td>
-                    <td>77</td>
-                    <td>4.6</td>
+                    <td class="w-75"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                 <tr>
                     <th scope="row">&#129353</th>
