--- a/week2.html
+++ b/week2.html
@@ -68,14 +68,14 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75">Kale</td>
-                    <td>18'1"</td>
+                    <td class="w-75">Lucas</td>
+                    <td>2'4"</td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75">Brayden</td>
-                    <td>24'6"</td>
+                    <td class="w-75">Ryan</td>
+                    <td>32'</td>
                 </tr>
             </tbody>
         </table>
@@ -102,20 +102,27 @@
                     <td></td>
                 </tr>
                 <th scope="row">&#129352</th>
+                    <td class="w-75">Ryan</td>
+                    <td>77</td>
+                    <td>71</td>
+                    <td>3.8</td>
+                    <td></td>
+                <tr>
+                    <th scope="row">&#129353</th>
+                    <td class="w-75">Lucas</td>
+                    <td>81</td>
+                    <td>76</td>
+                    <td>6.2</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
                     <td class="w-75">Brayden</td>
                     <td>77</td>
                     <td>77</td>
                     <td>4.6</td>
                     <td></td>
-                <tr>
-                    <th scope="row">&#129353</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                
+                </tr>                
             </tbody>
         </table>
     </div>
