--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-    window.alert("Week 2 is live! \nLocation: Kauri Cliffs\nTees: White \nPins: Thursday \nStimp: 10 \nGimme: 5' \nElevation: Course \nFairways: Firm \nGreens: Firm");
+    window.alert("Week 3 is live! \nLocation: Muskoka Bay Club\nTees: Blue \nPins: Thursday \nStimp: 10 \nGimme: 5' \nElevation: Course \nFairways: Firm \nGreens: Firm");
     </script>
 </body>
 </html>
