--- a/week3.html
+++ b/week3.html
@@ -74,8 +74,8 @@
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Kale</td>
+                    <td>21'</td>
                 </tr>
             </tbody>
         </table>
@@ -95,10 +95,10 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Kale</td>
+                    <td>76</td>
+                    <td>72</td>
+                    <td>3.7</td>
                     <td></td>
                 </tr>
                 <th scope="row">&#129352</th>
