--- a/week2.html
+++ b/week2.html
@@ -68,14 +68,14 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75">Kale</td>
-                    <td>18'1"</td>
+                    <td class="w-75">Lucas</td>
+                    <td>2'4"</td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75">Brayden</td>
-                    <td>24'6"</td>
+                    <td class="w-75">Matt</td>
+                    <td>37'9"</td>
                 </tr>
             </tbody>
         </table>
@@ -99,23 +99,54 @@
                     <td>75</td>
                     <td>71</td>
                     <td>3.0</td>
-                    <td></td>
+                    <td>7</td>
                 </tr>
                 <th scope="row">&#129352</th>
+                    <td class="w-75">Ryan</td>
+                    <td>77</td>
+                    <td>71</td>
+                    <td>3.8</td>
+                    <td>6</td>
+                <tr>
+                    <th scope="row">&#129353</th>
+                    <td class="w-75">Wheels</td>
+                    <td>81</td>
+                    <td>74</td>
+                    <td>7.8</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td class="w-75">Lucas</td>
+                    <td>81</td>
+                    <td>76</td>
+                    <td>6.2</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
                     <td class="w-75">Brayden</td>
                     <td>77</td>
                     <td>77</td>
                     <td>4.6</td>
-                    <td></td>
-                <tr>
-                    <th scope="row">&#129353</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>3</td>
                 </tr>
-                
+                <tr>
+                    <th scope="row">6</th>
+                    <td class="w-75">Matt</td>
+                    <td>85</td>
+                    <td>77</td>
+                    <td>9.4</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td class="w-75">Darcy</td>
+                    <td>80</td>
+                    <td>77</td>
+                    <td>7.0</td>
+                    <td>1</td>
+                </tr>                  
             </tbody>
         </table>
     </div>
