--- a/week3.html
+++ b/week3.html
@@ -68,14 +68,14 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Ryan</td>
+                    <td>13'6"</td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Ryan</td>
+                    <td>30'9"</td>
                 </tr>
             </tbody>
         </table>
@@ -95,27 +95,42 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Ryan</td>
+                    <td>76</td>
+                    <td>71</td>
+                    <td>3.7</td>
                     <td></td>
                 </tr>
                 <th scope="row">&#129352</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Kale</td>
+                    <td>76</td>
+                    <td>72</td>
+                    <td>3.7</td>
                     <td></td>
                 <tr>
                     <th scope="row">&#129353</th>
-                    <td class="w-75"></td>
+                    <td class="w-75">Brayden</td>
+                    <td>78</td>
+                    <td>77</td>
+                    <td>4.6</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
+                </tr>  
+                <tr>
+                    <th scope="row">4</th>
+                    <td class="w-75">Darcy</td>
+                    <td>81</td>
+                    <td>77</td>
+                    <td>6.2</td>
                     <td></td>
                 </tr>
-                
+                <tr>
+                    <th scope="row">5</th>
+                    <td class="w-75">Lucas</td>
+                    <td>86</td>
+                    <td>81</td>
+                    <td>5.4</td>
+                    <td></td>
+                </tr>                
             </tbody>
         </table>
     </div>
