--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <tr>
                     <th scope="col"></th>
                     <th scope="col">Player</th>
-                    <th scope="col">Points</th>
+                    <th scope="col">WGC Points</th>
                     <th scope="col">Handicap</th>
                     <th scope="col">Events</th>
                     </tr>
@@ -70,30 +70,30 @@
                 <tr>
                     <th scope="row">&#127942</th>
                     <td class="w-75">Kale</td>
-                    <td>14</td> 
+                    <td>18</td> 
                     <td>4.0</td>
-                    <td>2</td>             
+                    <td>3</td>             
                 </tr>
                 <tr>
                     <th scope="row">&#129352</th>
-                    <td class="w-75">Lucas</td>
-                    <td>12</td>    
-                    <td>5.1</td>
-                    <td>2</td>          
+                    <td class="w-75">Ryan</td>
+                    <td>17</td>    
+                    <td>5.0</td>
+                    <td>3</td>          
                 </tr>
                 <tr>
-                    <th scope="row">&#129352</th>
+                    <th scope="row">&#129353</th>
                     <td class="w-75">Brayden</td>
-                    <td>12</td>   
+                    <td>15</td>   
                     <td>0.6</td>
-                    <td>2</td>           
+                    <td>3</td>           
                 </tr>
                 <tr>
-                    <th scope="row">&#129352</th>
-                    <td class="w-75">Doc</td>
-                    <td>12</td>    
-                    <td>5.2</td>
-                    <td>2</td>          
+                    <th scope="row">4</th>
+                    <td class="w-75">Lucas</td>
+                    <td>13</td>    
+                    <td>5.1</td>
+                    <td>3</td>          
                 </tr>
                 <tr>
                     <th scope="row">5</th>
@@ -105,12 +105,12 @@
                 <tr>
                     <th scope="row">6</th>
                     <td class="w-75">Darcy</td>
-                    <td>6</td>    
+                    <td>8</td>    
                     <td>3.9</td>
-                    <td>2</td>          
+                    <td>3</td>          
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row">7</th>
                     <td class="w-75">Matt</td>
                     <td>6</td>    
                     <td>7.7</td>
