--- a/index.html
+++ b/index.html
@@ -134,9 +134,39 @@
             </tbody>
         </table>
     </div>
+    
+    <!-- Course Details Modal -->
+    <div class="modal fade" id="courseModal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="courseModalLabel">Week 3 is live!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Location:</strong> Muskoka Bay Club</p>
+                    <p><strong>Tees:</strong> Blue</p>
+                    <p><strong>Pins:</strong> Thursday</p>
+                    <p><strong>Stimp:</strong> 10</p>
+                    <p><strong>Gimme:</strong> 5'</p>
+                    <p><strong>Elevation:</strong> Course</p>
+                    <p><strong>Fairways:</strong> Firm</p>
+                    <p><strong>Greens:</strong> Firm</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-    window.alert("Week 3 is live! \nLocation: Muskoka Bay Club\nTees: Blue \nPins: Thursday \nStimp: 10 \nGimme: 5' \nElevation: Course \nFairways: Firm \nGreens: Firm");
+    // Show course details modal on page load
+    document.addEventListener('DOMContentLoaded', function() {
+        var courseModal = new bootstrap.Modal(document.getElementById('courseModal'));
+        courseModal.show();
+    });
     </script>
 </body>
 </html>
