--- a/index.html
+++ b/index.html
@@ -70,65 +70,79 @@
             <tbody>
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75">Kale</td>
-                    <td>18</td> 
-                    <td>3.8</td>
-                    <td>3</td>             
+                    <td class="w-75">Brayden</td>
+                    <td>25</td>   
+                    <td>0.6</td>
+                    <td>4</td>           
                 </tr>
                 <tr>
                     <th scope="row">&#129352</th>
                     <td class="w-75">Ryan</td>
-                    <td>17</td>    
+                    <td>23</td>    
                     <td>4.6</td>
-                    <td>3</td>          
+                    <td>4</td>          
                 </tr>
                 <tr>
                     <th scope="row">&#129353</th>
-                    <td class="w-75">Brayden</td>
-                    <td>15</td>   
-                    <td>0.6</td>
-                    <td>3</td>           
+                    <td class="w-75">Kale</td>
+                    <td>20</td> 
+                    <td>3.8</td>
+                    <td>4</td>             
                 </tr>
                 <tr>
                     <th scope="row">4</th>
                     <td class="w-75">Lucas</td>
-                    <td>13</td>    
+                    <td>17</td>    
                     <td>5.2</td>
-                    <td>3</td>          
+                    <td>4</td>          
                 </tr>
                 <tr>
                     <th scope="row">5</th>
-                    <td class="w-75">Wheels</td>
-                    <td>8</td>    
-                    <td>7.3</td>
-                    <td>2</td>          
+                    <td class="w-75">Darcy</td>
+                    <td>16</td>    
+                    <td>3.8</td>
+                    <td>4</td>          
                 </tr>
                 <tr>
                     <th scope="row">6</th>
-                    <td class="w-75">Darcy</td>
-                    <td>8</td>    
-                    <td>3.8</td>
+                    <td class="w-75">Wheels</td>
+                    <td>14</td>    
+                    <td>7.3</td>
                     <td>3</td>          
                 </tr>
                 <tr>
                     <th scope="row">7</th>
                     <td class="w-75">Matt</td>
-                    <td>6</td>    
+                    <td>14</td>    
                     <td>7.7</td>
-                    <td>2</td>          
+                    <td>3</td>          
                 </tr>
                 <tr>
                     <th scope="row">8</th>
-                    <td class="w-75">Kirk</td>
-                    <td>2</td>    
-                    <td>10.1</td>
+                    <td class="w-75">Justin</td>
+                    <td>10</td>
+                    <td></td>
                     <td>1</td>          
                 </tr>
                 <tr>
                     <th scope="row">9</th>
+                    <td class="w-75">Mitch</td>
+                    <td>4</td>
+                    <td></td>
+                    <td>1</td>          
+                </tr>
+                <tr>
+                    <th scope="row">10</th>
                     <td class="w-75">Brad</td>
-                    <td>1</td>    
+                    <td>3</td>    
                     <td>11.9</td>
+                    <td>2</td>          
+                </tr>
+                <tr>
+                    <th scope="row">11</th>
+                    <td class="w-75">Kirk</td>
+                    <td>2</td>    
+                    <td>10.1</td>
                     <td>1</td>          
                 </tr>
             </tbody>
@@ -140,13 +154,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="courseModalLabel">Week 3 is live!</h5>
+                    <h5 class="modal-title" id="courseModalLabel">Week 5 is live!</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p><strong>Location:</strong> Muskoka Bay Club</p>
-                    <p><strong>Tees:</strong> Blue</p>
-                    <p><strong>Pins:</strong> Thursday</p>
+                    <p><strong>Location:</strong> SGT West - Stadium Course</p>
+                    <p><strong>Tees:</strong> White</p>
+                    <p><strong>Pins:</strong> Friday</p>
                     <p><strong>Stimp:</strong> 10</p>
                     <p><strong>Gimme:</strong> 5'</p>
                     <p><strong>Elevation:</strong> Course</p>
