--- a/week4.html
+++ b/week4.html
@@ -87,8 +87,6 @@
                     <th scope="col">Pos</th>
                     <th scope="col">Player</th>
                     <th scope="col">Gross</th>
-                    <th scope="col">Net</th>
-                    <th scope="col">Dif</th>
                     <th scope="col">WGC Points</th>
                 </tr>
             </thead>
@@ -96,25 +94,33 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Brayden/Justin</td>
+                    <td>75</td>
+                    <td>10</td>
                 </tr>
-                <th scope="row">&#129352</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <tr>
+                    <th scope="row">&#129352</th>
+                    <td class="w-75">Darcy/Matt</td>
+                    <td>79</td>
+                    <td>8</td>
+                </tr>
                 <tr>
                     <th scope="row">&#129353</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Ryan/Wheels</td>
+                    <td>79</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td class="w-75">Lucas/Mitch</td>
+                    <td>85</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td class="w-75">Kale/Brad</td>
+                    <td>85</td>
+                    <td>2</td>
                 </tr>
                 
             </tbody>
