--- a/week4.html
+++ b/week4.html
@@ -69,13 +69,13 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75"></td>
+                    <td class="w-75">Ryan</td>
                     <td></td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75"></td>
+                    <td class="w-75">Ryan</td>
                     <td></td>
                 </tr>
             </tbody>
