--- a/week5.html
+++ b/week5.html
@@ -75,8 +75,8 @@
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Lucas</td>
+                    <td>23'7"</td>
                 </tr>
             </tbody>
         </table>
@@ -96,18 +96,20 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Lucas</td>
+                    <td>74</td>
+                    <td>69</td>
+                    <td>2.7</td>
+                    <td>2</td>
                 </tr>
-                <th scope="row">&#129352</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <tr>
+                    <th scope="row">&#129352</th>
+                    <td class="w-75">Ryan</td>
+                    <td>90</td>
+                    <td>85</td>
+                    <td>14.9</td>
+                    <td>1</td>
+                </tr>
                 <tr>
                     <th scope="row">&#129353</th>
                     <td class="w-75"></td>
