--- a/week5.html
+++ b/week5.html
@@ -100,7 +100,7 @@
                     <td>74</td>
                     <td>69</td>
                     <td>2.7</td>
-                    <td>3</td>
+                    <td>7</td>
                 </tr>
                 <tr>
                     <th scope="row">&#129352</th>
@@ -108,14 +108,46 @@
                     <td>72</td>
                     <td>71</td>
                     <td>1.1</td>
-                    <td>2</td>
+                    <td>6</td>
                 </tr>
                 <tr>
                     <th scope="row">&#129353</th>
+                    <td class="w-75">Kale</td>
+                    <td>84</td>
+                    <td>80</td>
+                    <td>9.2</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td class="w-75">Darcy</td>
+                    <td>87</td>
+                    <td>83</td>
+                    <td>10.8</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td class="w-75">Matt</td>
+                    <td>91</td>
+                    <td>83</td>
+                    <td>15.7</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
                     <td class="w-75">Ryan</td>
                     <td>90</td>
                     <td>85</td>
                     <td>14.9</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td class="w-75">Wheels</td>
+                    <td>97</td>
+                    <td>90</td>
+                    <td>16.5</td>
                     <td>1</td>
                 </tr>
                 
