--- a/week6.html
+++ b/week6.html
@@ -69,14 +69,14 @@
                 <!--KP-->
                 <tr>
                     <th scope="row">&#9971 KP</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Ryan</td>
+                    <td>24'4"</td>
                 </tr>
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75"></td>
-                    <td></td>
+                    <td class="w-75">Brayden</td>
+                    <td>37'1"</td>
                 </tr>
             </tbody>
         </table>
@@ -96,25 +96,35 @@
                 <!--Weekly Leaderboard-->
                 <tr>
                     <th scope="row">&#127942</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Kale</td>
+                    <td>75</td>
+                    <td>71</td>
+                    <td>1.3</td>
+                    <td>4</td>
                 </tr>
-                <th scope="row">&#129352</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <tr>
+                    <th scope="row">&#129352</th>
+                    <td class="w-75">Ryan</td>
+                    <td>80</td>
+                    <td>75</td>
+                    <td>5.4</td>
+                    <td>3</td>
+                </tr>
                 <tr>
                     <th scope="row">&#129353</th>
-                    <td class="w-75"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td class="w-75">Lucas</td>
+                    <td>83</td>
+                    <td>79</td>
+                    <td>7.9</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td class="w-75">Brayden</td>
+                    <td>83</td>
+                    <td>83</td>
+                    <td>7.1</td>
+                    <td>1</td>
                 </tr>
                 
             </tbody>
