--- a/week6.html
+++ b/week6.html
@@ -75,8 +75,8 @@
                 <!--Hole Out-->
                 <tr>
                     <th scope="row">&#128163 Hole Out</th>
-                    <td class="w-75">Brayden</td>
-                    <td>37'1"</td>
+                    <td class="w-75">Darcy</td>
+                    <td>43'4"</td>
                 </tr>
             </tbody>
         </table>
@@ -100,7 +100,7 @@
                     <td>75</td>
                     <td>71</td>
                     <td>1.3</td>
-                    <td>4</td>
+                    <td>7</td>
                 </tr>
                 <tr>
                     <th scope="row">&#129352</th>
@@ -108,18 +108,42 @@
                     <td>80</td>
                     <td>75</td>
                     <td>5.4</td>
-                    <td>3</td>
+                    <td>6</td>
                 </tr>
                 <tr>
                     <th scope="row">&#129353</th>
+                    <td class="w-75">Darcy</td>
+                    <td>83</td>
+                    <td>79</td>
+                    <td>7.1</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
                     <td class="w-75">Lucas</td>
                     <td>83</td>
                     <td>79</td>
                     <td>7.9</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td class="w-75">Matt</td>
+                    <td>87</td>
+                    <td>79</td>
+                    <td>10.4</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td class="w-75">Wheels</td>
+                    <td>88</td>
+                    <td>81</td>
+                    <td>10.4</td>
                     <td>2</td>
                 </tr>
                 <tr>
-                    <th scope="row">4</th>
+                    <th scope="row">7</th>
                     <td class="w-75">Brayden</td>
                     <td>83</td>
                     <td>83</td>
